seperate main function

--- a/frozen_lake/config.json
+++ b/frozen_lake/config.json
@@ -1,4 +1,6 @@
 {
+    "fname": "config.json",
+    "default": true,
     "num_episodes": 2000,
     "Q_learning_method": 3,
     "discounted": 0.9,
