parse config Q_table, Q_network

--- a/frozen_lake/config.json
+++ b/frozen_lake/config.json
@@ -1,9 +1,14 @@
 {
-    "fname": "config.json",
-    "default": true,
-    "num_episodes": 2000,
-    "Q_learning_method": 3,
-    "discounted": 0.9,
-    "learning_rate": 0.2,
-    "slippery": true
+    "Q_table": {
+        "fname": "config.json",
+        "default": true,
+        "num_episodes": 2000,
+        "Q_learning_method": 3,
+        "discounted": 0.9,
+        "learning_rate": 0.2,
+        "slippery": true
+    },
+    "Q_network": {
+        
+    }
 }
